# ChatHermesIntegration

./: config.py  main.py  pyproject.toml
static/css/: style.css
static/js/: chat.js
templates/: index.html
